force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/leaseworks__Maintenance_Program_Event_Catalog__c.object-meta.xml
<CustomObject>
    <description>Maintenance Program Event Catalog is used to provide information about the catalog costs of the events for a given year
[MODULE: Asset]
[LOAD: Optional]
[PREREQUISITES: Maintenance Program Event]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Maintenance Program Event Catalog</label>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Program Event Catalog</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>