force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Current__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current__c</fullName>
    <formula>leaseworks__Maintenance_Program_Event__r.leaseworks__Maintenance_Program__r.leaseworks__Current_Catalog_Year__c ==  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Catalog Year?</label>
    <type>Checkbox</type>
</CustomField>