force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Engine_Variant_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Variant_GP__c</fullName>
    <label>MP Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Engine_Variant_Global</valueSetName>
    </valueSet>
</CustomField>