force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Event_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Cost__c</fullName>
    <label>Event Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>