force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Type__c</fullName>
    <description>[LOAD: No]
        [JUSTIFICATION: This field is deprecated]
        [REPLACEMENT OBJECT API: NA]
        [REPLACEMENT FIELD API: NA]
        [COMMENTS: Asana link https://app.asana.com/1/7934919496419/project/1150819886958569/task/1207126408685378?focus=true
            Reason - [Tech debt] Deprecate MR Comps component and associated data
            Version - v54]</description>
    <formula>TEXT(leaseworks__Maintenance_Program_Event__r.leaseworks__Event_Type_Global__c)</formula>
    <label>Z_Unused_2508 Event Type</label>
    <type>Text</type>
</CustomField>