force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Interval_2_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_2_Months__c</fullName>
    <label>Z_Unused_2304 Interval 2 ( Months )</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>