force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Interval_Customized__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_Customized__c</fullName>
    <description>Checked when any threshold/interval value is entered on the catalog level</description>
    <formula>IF( OR(
leaseworks__Interval_2_Cycles__c&gt;0,
leaseworks__Interval_2_Hours__c&gt;0, 
leaseworks__Interval_2_Months__c&gt;0,
 leaseworks__Never_Exceed_Period_Cycles__c&gt;0,
 leaseworks__Never_Exceed_Period_Hours__c&gt;0, 
 leaseworks__Never_Exceed_Period_Months__c&gt;0
),true,
false
)</formula>
    <inlineHelpText>Checked when any threshold/interval value is entered on the catalog level</inlineHelpText>
    <label>Interval Customized</label>
    <type>Checkbox</type>
</CustomField>