force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__MP_Applicability__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MP_Applicability__c</fullName>
    <description>Applicability identification to be used for specific Assembly Model defined in the global picklist</description>
    <inlineHelpText>Applicability identification to be used for specific Assembly Model defined in the global picklist</inlineHelpText>
    <label>Z_Unused_2309 MP Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__MP_Applicability</valueSetName>
    </valueSet>
</CustomField>