force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Never_Exceed_Period_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Never_Exceed_Period_Hours__c</fullName>
    <label>Z_Unused_2304 Interval 1 ( Hours )</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>