force-app/main/default/objects/leaseworks__Maintenance_Program_Event_Catalog__c/fields/leaseworks__Y_Hidden_Interval_2_Hours_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Interval_2_Hours_F__c</fullName>
    <formula>leaseworks__Maintenance_Program_Event__r.leaseworks__Interval_2_Hours__c</formula>
    <label>Z_Unused_2507 _Interval 2 ( Hours )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>